Always do cors, never do anything else
