# lib/commands/generateApi/generateProxyEndPoint.js
@@ -1,7 +1,7 @@
 import { create } from 'xmlbuilder';
 import { writeFile } from 'fs/promises';
 import { join, resolve } from 'path';
-import * as serviceUtils from '../../util/service.js';
+import { corsConfig } from '../policyConfig/cors.js'
 
 const ALLOWED_VERBS = [
   'GET',
@@ -15,7 +15,7 @@ const ALLOWED_VERBS = [
   'PATCH',
 ];
 
-function generateFlow(flows, { apiPath, method, resource, raiseFaultName }) {
+function generateFlow(flows, { apiPath, method, resource }) {
   const operationId =
     resource.operationId || `${method.toUpperCase()} ${apiPath}`;
   const flow = flows.ele('Flow', { name: operationId });
@@ -24,48 +24,6 @@ function generateFlow(flows, { apiPath, method, resource, raiseFaultName }) {
   flow.ele('Description', {}, resource.summary);
   const requestPipe = flow.ele('Request');
 
-  // Add conditions for parameters.
-  if (raiseFaultName && method.toUpperCase() === 'GET' && resource.parameters) {
-    const { parameters } = resource;
-    let paramCondition = '';
-    let cnt = 0;
-    parameters.forEach((param) => {
-      if (param.required && param.in === 'query') {
-        const op = cnt > 0 ? ' or ' : '';
-        paramCondition += `${op}(request.queryparam.${param.name} Equals null)`;
-        cnt += 1;
-      }
-      // if (param.required && param.in === 'path') {
-      //   var op = (cnt > 0) ? ' or ' : '';
-      //   paramCondition +=  op + '(request.queryparam.' + param.name + ' Equals null)';
-      //   cnt++;
-      // }
-    });
-    if (paramCondition.length > 0) {
-      const requestStep = requestPipe.ele('Step');
-      requestStep.ele('Condition').raw(paramCondition);
-      requestStep.ele('Name', {}, raiseFaultName);
-    }
-  }
-
-  const responsePipe = flow.ele('Response');
-  if (resource['x-a127-apply']) {
-    Object.entries(resource['x-a127-apply']).forEach(
-      ([service, { endPoint, pipe }]) => {
-        if (endPoint.indexOf('proxy') > -1) {
-          if (pipe.indexOf('request') > -1) {
-            const step = requestPipe.ele('Step', {});
-            step.ele('Name', {}, service);
-          }
-          if (pipe.indexOf('response') > -1) {
-            const step = responsePipe.ele('Step', {});
-            step.ele('Name', {}, service);
-          }
-        }
-      }
-    );
-  }
-  // Check for Security Policies in a-127
   if (resource.security) {
     Object.values(resource.security)
       .flatMap((it) => it)
@@ -83,7 +41,7 @@ export async function generateProxyEndPoint(
   { destination = resolve('api_bundles'), basepath, virtualhosts },
   api
 ) {
-  let useCors;
+  const useCors = 'add-cors';
   const rootDirectory = join(destination, apiProxy, 'apiproxy');
   const root = create('ProxyEndpoint');
   root.att('name', 'default');
@@ -91,72 +49,10 @@ export async function generateProxyEndPoint(
   let preFlow = root.ele('PreFlow', { name: 'PreFlow' });
 
   // Add steps to preflow.
-  let raiseFaultName;
-  const requestPipe = preFlow.ele('Request');
   const responsePipe = preFlow.ele('Response');
-  const services = serviceUtils.servicesToArray(api);
-  services.forEach((serviceItem) => {
-    if (serviceItem.provider === 'x-cors') {
-      useCors = serviceItem.name;
-      const step = responsePipe.ele('Step', {});
-      step.ele('Name', {}, serviceItem.name);
-      step.ele('Condition', {}, 'request.verb != "OPTIONS"');
-    }
-    if (
-      serviceItem.provider === 'x-input-validation' &&
-      serviceItem.apply.endPoint.indexOf('proxy') > -1
-    ) {
-      if (
-        serviceItem.apply.pipe.indexOf('request') > -1 &&
-        serviceItem.options.displayName
-      ) {
-        const step = requestPipe.ele('Step', {});
-        step.ele('Name', {}, 'Extract Path Parameters');
-        const step2 = requestPipe.ele('Step', {});
-        step2.ele('Name', {}, serviceItem.options.displayName);
-      }
-    }
-    if (
-      serviceItem.provider === 'x-raiseInputValidationFault' &&
-      serviceItem.apply.endPoint.indexOf('proxy') > -1
-    ) {
-      if (
-        serviceItem.apply.pipe.indexOf('request') > -1 &&
-        serviceItem.options.displayName
-      ) {
-        raiseFaultName = serviceItem.options.displayName;
-        const step = requestPipe.ele('Step', {});
-        step.ele('Condition', {}, '(INPUT.error equals true)');
-        step.ele('Name', {}, raiseFaultName);
-      }
-    }
-    if (
-      serviceItem.provider === 'x-regex-protection' &&
-      serviceItem.apply.endPoint.indexOf('proxy') > -1
-    ) {
-      if (
-        serviceItem.apply.pipe.indexOf('request') > -1 &&
-        serviceItem.options.displayName
-      ) {
-        const step = requestPipe.ele('Step', {});
-        step.ele('Name', {}, serviceItem.options.displayName);
-      }
-    }
-    if (
-      serviceItem.provider === 'x-raiseFault' &&
-      serviceItem.apply.endPoint.indexOf('proxy') > -1
-    ) {
-      if (
-        serviceItem.apply.pipe.indexOf('request') > -1 &&
-        serviceItem.options.displayName
-      ) {
-        raiseFaultName = serviceItem.options.displayName;
-        const step = requestPipe.ele('Step', {});
-        step.ele('Condition', {}, '(FILTER.block equals true)');
-        step.ele('Name', {}, raiseFaultName);
-      }
-    }
-  });
+  const step = responsePipe.ele('Step', {});
+  step.ele('Name', {}, corsConfig.name);
+  step.ele('Condition', {}, 'request.verb != "OPTIONS"');
 
   const flows = root.ele('Flows', {});
 
@@ -175,54 +71,10 @@ export async function generateProxyEndPoint(
         .filter(([method]) => ALLOWED_VERBS.includes(method.toUpperCase()))
         .map(([method, resource]) => ({ apiPath, method, resource }))
     )
-    .forEach((flow) => generateFlow(flows, { ...flow, raiseFaultName }));
+    .forEach((flow) => generateFlow(flows, flow));
 
   const postFlow = root.ele('PostFlow', { name: 'PostFlow' });
   postFlow.ele('Request');
-  const postFlowPipe = postFlow.ele('Response');
-
-  Object.values(api['x-a127-services']).forEach((serviceItem) => {
-    if (
-      serviceItem.provider === 'x-output-validation' &&
-      serviceItem.apply.endPoint.indexOf('proxy') > -1
-    ) {
-      if (
-        serviceItem.apply.pipe.indexOf('response') > -1 &&
-        serviceItem.options.displayName
-      ) {
-        const step = postFlowPipe.ele('Step', {});
-        step.ele('Name', {}, serviceItem.options.displayName);
-      }
-    }
-    if (
-      serviceItem.provider === 'x-raiseOutputValidationFault' &&
-      serviceItem.apply.endPoint.indexOf('proxy') > -1
-    ) {
-      if (
-        serviceItem.apply.pipe.indexOf('response') > -1 &&
-        serviceItem.options.displayName
-      ) {
-        raiseFaultName = serviceItem.options.displayName;
-        const step = postFlowPipe.ele('Step', {});
-        step.ele('Condition', {}, '(SCHEMA.error equals true)');
-        step.ele('Name', {}, raiseFaultName);
-      }
-    }
-    if (
-      serviceItem.provider === 'x-headers' &&
-      serviceItem.apply.endPoint.indexOf('proxy') > -1
-    ) {
-      if (
-        serviceItem.apply.pipe.indexOf('response') > -1 &&
-        serviceItem.options.displayName
-      ) {
-        raiseFaultName = serviceItem.options.displayName;
-        const step = postFlowPipe.ele('Step', {});
-        // step.ele('Condition', {}, '(SCHEMA.error equals true)');
-        step.ele('Name', {}, raiseFaultName);
-      }
-    }
-  });
 
   const httpProxyConn = root.ele('HTTPProxyConnection');
   if (basepath) {
