# lib/commands/generateApi/generateTargetEndPoint.js
@@ -14,26 +14,8 @@ export async function generateTargetEndPoint(
   const preFlow = root.ele('PreFlow', { name: 'PreFlow' });
 
   // Add steps to preflow.
-  const requestPipe = preFlow.ele('Request');
+  preFlow.ele('Request');
   preFlow.ele('Response');
-  Object.values(api['x-a127-services']).forEach((serviceItem) => {
-    if (serviceItem.provider === 'x-headers') {
-      if (
-        serviceItem.apply &&
-        serviceItem.apply.endPoint.indexOf('target') > -1
-      ) {
-        if (
-          serviceItem.apply &&
-          serviceItem.apply.pipe.indexOf('request') > -1 &&
-          serviceItem.options.displayName
-        ) {
-          const step = requestPipe.ele('Step', {});
-          step.ele('Name', {}, serviceItem.options.displayName);
-        }
-      }
-    }
-  });
-
   root.ele('Flows', {});
 
   const postFlow = root.ele('PostFlow', { name: 'PostFlow' });
