# lib/policy_templates/validations/valid.js
@@ -1,9 +1,8 @@
-import * as builder from 'xmlbuilder';
-import omit from 'lodash.omit';
+import * as builder from 'xmlbuilder'
 
 export function validationsSchema(api) {
-  const blackList = ['host', 'x-a127-services'];
-  return omit(api, blackList);
+  const { host, 'x-a127-services': services, ...rest } = api;
+  return rest;
 }
 
 export function validationsTemplate(options) {
